Added list of topics

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
 	<body>
-		Hello World!
+		<ul>
+			<li>Tech</li>
+			<li>Bartending</li>
+			<li>Cannasseur</li>
+			<li>Gardening</li>
+		</ul>
 	</body>
 </html>
