--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link rhref="styles.css" type="text/css" rel="stylesheet" />
+		<link href="styles.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
 		<ul>
